Brought top blogspot article to the front page

--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -5,9 +5,9 @@
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     
     <title>100 Beds for Haiti</title>
- <meta name="description" content="The 100 Beds for Haiti Campaign supports long-term health solutions that meet immediate needs, by helping Haiti heal, one bed at a time." />
-<meta name="keywords" content="Haiti earthquake recovery, hospital beds, health in Haiti, healthy Haiti, healthcare in Haiti, 100 beds" />
-<link rel='shortcut icon' type='image/ico' href='/images/favicon.ico' />  <link rel='icon' type='image/ico' href='/images/favicon.ico' />  
+    <meta name="description" content="The 100 Beds for Haiti Campaign supports long-term health solutions that meet immediate needs, by helping Haiti heal, one bed at a time." />
+    <meta name="keywords" content="Haiti earthquake recovery, hospital beds, health in Haiti, healthy Haiti, healthcare in Haiti, 100 beds" />
+    <link rel='shortcut icon' type='image/ico' href='/images/favicon.ico' />  <link rel='icon' type='image/ico' href='/images/favicon.ico' />  
     <link rel='stylesheet' type='text/css' href='/css/style.css' />
     <link rel="stylesheet" href="/css/vlightbox.css" type="text/css" />
     <style type="text/css">#vlightbox a#vlb{display:none}</style>
@@ -19,166 +19,208 @@
 
  
 
-<body>
-<div id="head">
-<div id="wrap">
-<div id="donate">
-<a href="/donate"><img src="images/donatebutton.png" alt="Donate now to bring beds to Haiti"></a>
-</div>
+  <body>
+    <div id="head">
+      <div id="wrap">
+	<div id="donate">
+	  <a href="/donate"><img src="images/donatebutton.png" alt="Donate now to bring beds to Haiti"></a>
+	  </div>
 
-<a href="http://100bedsforhaiti.com"><img src="images/haiti_logo.jpg" alt="100 Beds for Haiti logo" /></a>
+	  <a href="http://100bedsforhaiti.com"><img src="images/haiti_logo.jpg" alt="100 Beds for Haiti logo" /></a>
+	  
+	</div>
+	
+      </div>
+    
+      <div id="navigation"><div id="wrap">
+	  <ul id="" class="nav-list group">
+	    <li><a href="/">home</a></li>
+	    <li><a href="/about">about</a></li>
+	    <li><a href="/partners">partners</a></li>
+	    <li><a href="/how">how we work</a></li>
+	    <li><a href="/getinvolved">get involved</a></li>
+	    <li><a href="http://100bedsforhaitiblog.blogspot.com/" target="_blank">blog</a></li>
 
-</div>
-
-</div>
-
-<div id="navigation"><div id="wrap">
-			<ul id="" class="nav-list group">
-				<li><a href="/">home</a></li>
-				<li><a href="/about">about</a></li>
-				<li><a href="/partners">partners</a></li>
-				<li><a href="/how">how we work</a></li>
-				<li><a href="/getinvolved">get involved</a></li>
-		<li><a href="http://100bedsforhaitiblog.blogspot.com/" target="_blank">blog</a></li>
 
 
-
-				</ul>
-
-</div>
-</div>
-
-<div id="wrap">
+	  </ul>
+	  
+	</div>
+      </div>
+    
+      <div id="wrap">
 	
-<div id="sidebar">
-<div id="progress"><a href="/donate"><img src="images/progress35.png" alt="35 of 100 beds" /></a></div>
-<object width="290" height="163"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="290" height="163"></embed></object><br />
-<a href="http://vimeo.com/9114595">H&ocirc;pital Sacr&eacute; Coeur "Haiti Relief Fund"</a><br />
+	<div id="sidebar">
+	  <div id="progress"><a href="/donate"><img src="images/progress35.png" alt="35 of 100 beds" /></a></div>
+	  <object width="290" height="163"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="290" height="163"></embed></object><br />
+	  <a href="http://vimeo.com/9114595">H&ocirc;pital Sacr&eacute; Coeur "Haiti Relief Fund"</a><br />
+	  
+	  <!-- Start of Flickr Badge -->
+	  <div class="flickr">
+	    <div class="flickrwrapper">
+	      <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=6&display=random&size=s&layout=x&source=user&user=47421840%40N06"></script>
+	    </div>
+	    <div class="flickrlink"><a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank">100 Beds for Haiti&#39;s Flickr Photostream</a></div></div>
+	  <!-- End of Flickr Badge -->
+	  
+	  <!-- End of Flickr Badge -->
+	  
+	  
+	  <div id="social"><a href="http://100bedsforhaitiblog.blogspot.com/feeds/posts/default" target="_blank"><img src="images/rss.png" /></a>
+	    <div class="socialrow">
+	      <a href="http://twitter.com/100bedsforhaiti" target="_blank"><img src="images/twitter.png" /></a>
+	      
+	      <a href="http://www.facebook.com/home.php?#!/pages/100-Beds-for-Haiti/296584143649" target="_blank"><img src="images/facebook.png" /></a>
+	      <a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank"><img src="images/flickr.png" /></a>
+	      
+	      <a href="http://vimeo.com/9114595" target="_blank"><img src="images/vimeo.png" /></a>	      	
+	    </div>
+	  </div>
+	  <div style="clear:both; height:20px;"></div>
+	  <!--Start Twitter widget-->
+	  <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+	  <script>
+new TWTR.Widget({
+  version: 2,
+  type: 'profile',
+  rpp: 3,
+  interval: 6000,
+  width: 330,
+  height: 300,
+  theme: {
+    shell: {
+      background: '#c1272d',
+      color: '#ffffff'
+    },
+    tweets: {
+      background: '#2F2626',
+      color: '#ffffff',
+      links: '#4ebaff'
+    }
+  },
+  features: {
+    scrollbar: false,
+    loop: false,
+    live: false,
+    hashtags: true,
+    timestamp: true,
+    avatars: false,
+    behavior: 'all'
+  }
+}).render().setUser('100bedsforhaiti').start();
+	  </script>
+	  <!--End Twitter widget-->
 
-<!-- Start of Flickr Badge -->
-<div class="flickr">
-<div class="flickrwrapper">
-<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=6&display=random&size=s&layout=x&source=user&user=47421840%40N06"></script>
-</div>
-<div class="flickrlink"><a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank">100 Beds for Haiti&#39;s Flickr Photostream</a></div></div>
-<!-- End of Flickr Badge -->
+	  <br />
 
-<!-- End of Flickr Badge -->
+	  <!--Start Facebook widget-->
+	  <script type="text/javascript" src="http://static.ak.connect.facebook.com/connect.php/en_US"></script><script type="text/javascript">FB.init("f6b670ebb25e8cb7ab11fe05aabf8179");</script><fb:fan profile_id="296584143649" stream="1" connections="10" logobar="1" width="330"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/100-Beds-for-Haiti/296584143649">100 Beds for Haiti</a> on Facebook</div>
+	  <!--End Facebook widget-->
 
 
-<div id="social"><a href="http://100bedsforhaitiblog.blogspot.com/feeds/posts/default" target="_blank"><img src="images/rss.png" /></a>
-<div class="socialrow">
-<a href="http://twitter.com/100bedsforhaiti" target="_blank"><img src="images/twitter.png" /></a>
+	</div>
+	
+	<div id="main">
+	  $maincol()
 
-<a href="http://www.facebook.com/home.php?#!/pages/100-Beds-for-Haiti/296584143649" target="_blank"><img src="images/facebook.png" /></a>
-<a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank"><img src="images/flickr.png" /></a>
-
-<a href="http://vimeo.com/9114595" target="_blank"><img src="images/vimeo.png" /></a>	      	
-</div>
-</div>
-</div>
-
-<div id="main">
-		    $maincol()
-
-		    <script type="text/javascript">
-		      \$(document).ready(function(){
-		      \$.getJSON('http://www.twitter.com/status/user_timeline/100beds4Haiti.json?count=10&callback=?',
-		      function(data){
-		      var tweets = '';
-		      console.log(data);
-		      \$.each(data, function(index, item){
-		      tweets += '<div id="tweet"><p>' + item.text + '</p></div>'
-		      });
-		      \$('#twitter').append(tweets);
-		      });
-		      });
-		    </script>	
-		</div>
+	  <script type="text/javascript">
+	    \$(document).ready(function(){
+	    \$.getJSON('http://www.twitter.com/status/user_timeline/100beds4Haiti.json?count=10&callback=?',
+	    function(data){
+	    var tweets = '';
+	    console.log(data);
+	    \$.each(data, function(index, item){
+	    tweets += '<div id="tweet"><p>' + item.text + '</p></div>'
+	    });
+	    \$('#twitter').append(tweets);
+	    });
+	    });
+	  </script>	
+	</div>
 	
+	
+      </div>	
+    
 
-	</div>	
- 
 
+      <br clear="all" />
+      <div id="footer"><div id="footer-wrap"><ul><li><a href="/contact">Contact Us</a></li></ul></div></div>  
+    </body>
+  </html>
 
-<br clear="all" />
-<div id="footer"><div id="footer-wrap"><ul><li><a href="/contact">Contact Us</a></li></ul></div></div>  
-</body>
-</html>
+  #def donation_buttons()
+  <table>
+    <thead></thead>
+    <tbody>
+      <tr>
+	<td align="center">$500</td>
+	<td align="center">$250</td>
+	<td align="center">$100</td>
+	<td align="center">$50</td>
+	<td align="center">$10</td>
+	<td align="center">other</td>
+      </tr>
+      <tr>
+	<td>$pp_button(500)</td>
+	<td>$pp_button(250)</td>
+	<td>$pp_button(100)</td>
+	<td>$pp_button(50)</td>
+	<td>$pp_button(10)</td>
+	<td>$pp_button()</td>
+      </tr>
+    </tbody>
+  </table>
+  #end def
 
-#def donation_buttons()
-<table>
-  <thead></thead>
-  <tbody>
-    <tr>
-      <td align="center">$500</td>
-      <td align="center">$250</td>
-      <td align="center">$100</td>
-      <td align="center">$50</td>
-      <td align="center">$10</td>
-      <td align="center">other</td>
-    </tr>
-    <tr>
-      <td>$pp_button(500)</td>
-      <td>$pp_button(250)</td>
-      <td>$pp_button(100)</td>
-      <td>$pp_button(50)</td>
-      <td>$pp_button(10)</td>
-      <td>$pp_button()</td>
-    </tr>
-  </tbody>
-</table>
-#end def
+  #def is_selected($item_name)
+  #if $_cname == $item_name 
+  #return 'selected'
+  #end if
+  #end def
 
-#def is_selected($item_name)
-   #if $_cname == $item_name 
-     #return 'selected'
-   #end if
-#end def
+  #def head()
+  #end def
 
-#def head()
-#end def
+  #def suppress_right_col()
+  <style type="text/css">
+    \#maincol{ width: 100%; }
+    \#rightcol{ display: none; }
+  </style>
+  #end def
 
-#def suppress_right_col()
-     <style type="text/css">
-     \#maincol{ width: 100%; }
-     \#rightcol{ display: none; }
-     </style>
-#end def
+  #def right_col()
+  #end def
 
-#def right_col()
-#end def
-
-#def menu_item($iname, $idesc)
+  #def menu_item($iname, $idesc)
   #set $ipath = "/"+$iname
   #if $iname == "main"
-     #set $ipath = "/"
+  #set $ipath = "/"
   #end if
-    <div class="menu_item $is_selected($iname)">
-      <div class="right_menu_item"></div>
-      <div class="mid_menu_item">
-	<a href="$ipath">$idesc</a>
-      </div>
-      <div class="left_menu_item"></div>
+  <div class="menu_item $is_selected($iname)">
+    <div class="right_menu_item"></div>
+    <div class="mid_menu_item">
+      <a href="$ipath">$idesc</a>
     </div>
-#end def
+    <div class="left_menu_item"></div>
+  </div>
+  #end def
 
-#def pp_button($amount=0, $cc_logo=False)
-	  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-	    #if $amount > 0
-	    <input type="hidden" name="amount" value="$amount"/>
-	    #end if
-	    <input type="hidden" name="business" value="crudemjoni@peterjkellymd.com"/>
-	    <input type="hidden" name="cmd" value="_donations"/>
-	    <input type="hidden" name="item_name" value="100 Beds for Haiti"/>
-	    <input type="hidden" name="item_number" value="100 Beds for Haiti"/>
-	    <input type="hidden" name="cpp_header_image" value="http://www.100bedsforhaiti.com/images/100beds_sm.jpg"/>
-	    <input type="hidden" name="image_url" value="http://www.100bedsforhaiti.com/images/100beds_sm.jpg"/>
-	    <input type="hidden" name="page_style" value="primary"/>
-	    #if $amount > 0
-	    <input type="image" border="0" src="/images/${amount}.jpg" name="submit" alt="PayPal - The safer, easier way to donate online!">
-	    #else
-	    <input type="image" border="0" src="/images/other.jpg" name="submit" alt="PayPal - The safer, easier way to donate online!">
-	    #end if
-	  </form>
-#end def
+  #def pp_button($amount=0, $cc_logo=False)
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+    #if $amount > 0
+    <input type="hidden" name="amount" value="$amount"/>
+    #end if
+    <input type="hidden" name="business" value="crudemjoni@peterjkellymd.com"/>
+    <input type="hidden" name="cmd" value="_donations"/>
+    <input type="hidden" name="item_name" value="100 Beds for Haiti"/>
+    <input type="hidden" name="item_number" value="100 Beds for Haiti"/>
+    <input type="hidden" name="cpp_header_image" value="http://www.100bedsforhaiti.com/images/100beds_sm.jpg"/>
+    <input type="hidden" name="image_url" value="http://www.100bedsforhaiti.com/images/100beds_sm.jpg"/>
+    <input type="hidden" name="page_style" value="primary"/>
+    #if $amount > 0
+    <input type="image" border="0" src="/images/${amount}.jpg" name="submit" alt="PayPal - The safer, easier way to donate online!">
+      #else
+      <input type="image" border="0" src="/images/other.jpg" name="submit" alt="PayPal - The safer, easier way to donate online!">
+	#end if
+      </form>
+      #end def
