--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -77,15 +77,14 @@
 	    </div>
 	  </div>
 	  <div style="clear:both; height:20px;"></div>
-	  <!--Start Twitter widget-->
-	  <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+	  <!--Start Twitter widget-->	  <script src="http://widgets.twimg.com/j/2/widget.js"></script>
 	  <script>
 new TWTR.Widget({
   version: 2,
   type: 'profile',
   rpp: 3,
   interval: 6000,
-  width: 330,
+  width: 290,
   height: 300,
   theme: {
     shell: {
@@ -114,7 +113,7 @@ new TWTR.Widget({
 	  <br />
 
 	  <!--Start Facebook widget-->
-	  <script type="text/javascript" src="http://static.ak.connect.facebook.com/connect.php/en_US"></script><script type="text/javascript">FB.init("f6b670ebb25e8cb7ab11fe05aabf8179");</script><fb:fan profile_id="296584143649" stream="1" connections="10" logobar="1" width="330"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/100-Beds-for-Haiti/296584143649">100 Beds for Haiti</a> on Facebook</div>
+	  <script type="text/javascript" src="http://static.ak.connect.facebook.com/connect.php/en_US"></script><script type="text/javascript">FB.init("f6b670ebb25e8cb7ab11fe05aabf8179");</script><fb:fan profile_id="296584143649" stream="1" connections="10" logobar="1" width="290"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/100-Beds-for-Haiti/296584143649">100 Beds for Haiti</a> on Facebook</div>
 	  <!--End Facebook widget-->
 
 
