--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,7 +58,7 @@ dl dd {
 #main {
 	margin:20px 0 0 0;
 	float:left;
-	width:750px;
+	width:780px;
 }
 
 #sidecol {
@@ -388,6 +388,13 @@ td.donate-price {width: 200;
 
 #right, .right {float: right; position: relative; width:330px!important;}
 
+#right, #right div {
+	color:#000;
+	font-family: Helvetica, Tahoma, Arial, sans-serif;
+	font-size: 0.9em!important;
+	line-height:1.3em;
+}
+
 #right img {
 	margin-left:10px;
 }
@@ -442,7 +449,7 @@ table td {
 #sidebar {
 	background: #C2C1B9;
 	float: right;
-	width: 330px;
+	width: 290px;
 	height: auto;
 	padding: 10px;
 	margin:20px 0 20px 0;
