Showing multiple posts and dates on the FP

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -4,7 +4,7 @@
 
 #def maincol()
 <div id="page-wrap">
-	<h1>About 100 Beds</h1>
+	<h1>ABOUT 100 BEDS</h1>
 	<div id="right-text">
 		<h3>Why 100 Beds?</h3>  
 		<p>
