--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -3,7 +3,7 @@
 #def maincol()
 
 <div id="page-wrap">
-	<h1>Talk to us</h1>
+	<h1>TALK TO US</h1>
 	<div id="left-text">
 		<p>
 			Got ideas? Questions? We want to hear them. 
