--- a/views/donate.tmpl
+++ b/views/donate.tmpl
@@ -2,7 +2,7 @@
 
 #def maincol()
 
-<div id="page-wrap"> <h1>Donate Now</h1> <div id="right-text"><p> Please 
+<div id="page-wrap"> <h1>DONATE NOW</h1> <div id="right-text"><p> Please 
 click on an amount to donate to this campaign. All donations are made safely through PayPal.</p>
 
 <table> <tr> <td class="donate-price"> $pp_button(0) </td> <td class="donate-price"> $pp_button(25)
