--- a/views/how.tmpl
+++ b/views/how.tmpl
@@ -6,7 +6,7 @@
 <div class="onecol">
 <div id="right">
 
-<h1>How We Work</h1> <p> Through grassroots mobilization, marketing campaigns, corporate giving, fundraisers, word of mouth, social
+<h1>HOW WE WORK</h1> <p> Through grassroots mobilization, marketing campaigns, corporate giving, fundraisers, word of mouth, social
 networking, media and blog support, the 100 Beds for Haiti Campaign will raise the necessary resources through our friends, colleagues, and 
 supporters across the country and world to support our goal of delivering 100 hospital beds to Haiti by June 1, 2010.</p>
 <p>Are you interested in becoming a 100 Beds for Haiti stakeholder&#63; Please <a href="/contact">contact us</a> to learn about more opportunities.</p>
