Copy changes and limiting the post count to 5

--- a/views/donate.tmpl
+++ b/views/donate.tmpl
@@ -13,6 +13,6 @@ quickest way to help is by donating.</p> <p> We are raising the money and resour
 purchase, transportation, and delivery of 100 hospital beds to the H&ocirc;pital Sacr&eacute; Coeur.
 Every donation helps us reach this critical goal. </p> <p>100% of donations will be delivered
 directly to our partners in Haiti, The CRUDEM Foundation for the H&ocirc;pital Sacr&eacute;
-Coeur. All donations to the 100 Beds for Haiti campaign are earmarked for this particular cause.</p> <p> Please see the organization&#8217;s IRS letter of determination, audited
-financial statements and Tax ID number <a href="http://www.crudem.org/give/tax-info">here</a>. </p>
+Coeur. All donations to the 100 Beds for Haiti campaign are earmarked for this particular cause.</p> <p> Please see the organization&#39;s IRS letter of determination, audited 
+financial statements and Tax ID number <a href="http://www.crudem.org/tax-501-c-3/">here</a>. </p>
 </div> </div> #end def
