--- a/views/main.tmpl
+++ b/views/main.tmpl
@@ -5,7 +5,7 @@
   
 <div id="page-wrap">
   <div id="right">
-    <h1>100 Beds for Haiti's Blog</h1>
+    <h1>The 100 Beds Blog</h1>
     <h3 style="margin-bottom: 0px">$stories[0]['title']</h3>
     <i>$stories[0]['pubDate']</i>
     <br/><br/>
@@ -19,7 +19,7 @@
     </div>				      
   </div>
   <div style="clear:both;">&nbsp;</div>
-  #for $story in $stories[1:]
+  #for $story in $stories[1:5]
     <h3 style="margin-bottom: 0px">$story['title']</h3>
     <i>$stories[0]['pubDate']</i>
     <br/><br/>
