--- a/views/partners.tmpl
+++ b/views/partners.tmpl
@@ -25,7 +25,7 @@
 			in the United States, all donations to CRUDEM through the 100 Beds
  for Haiti Campaign are tax-deductible.  Please see the
 			organization&#39;s IRS letter of determination, audited financial
- statements and Tax ID number <a href="http://www.crudem.org/give/tax-info" target="_blank">here</a>. 
+ statements and Tax ID number <a href="http://www.crudem.org/tax-501-c-3/" target="_blank">here</a>. 
 		</p>
 
 		<p>100&#37; of donations to the 100 Beds for Haiti Campaign are earmarked for this particular cause and will go directly to the organization.</p> 
