--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,6 +270,7 @@ ul.nav-list  {
 	letter-spacing: -0.03em;
 	font-family: Helvetica, Tahoma, Arial, sans-serif;
 	font-weight: 500;
+	text-transform: uppercase;         
 }
 	
 #page-wrap h2 {
@@ -387,7 +388,7 @@ td.donate-price {width: 200;
 
 #right, .right {float: right; position: relative; width:330px!important;}
 
-#right, #right div {
+#right, #right div, #right p {
 	color:#000;
 	font-family: Helvetica, Tahoma, Arial, sans-serif;
 	font-size: 0.9em!important;
