--- a/views/how.tmpl
+++ b/views/how.tmpl
@@ -6,21 +6,20 @@
 <div class="onecol">
 <div id="right">
 
-<h1>HOW WE WORK</h1> <p> Through grassroots mobilization, marketing campaigns, corporate giving, fundraisers, word of mouth, social
-networking, media and blog support, the 100 Beds for Haiti Campaign will raise the necessary resources through our friends, colleagues, and 
-supporters across the country and world to support our goal of delivering 100 hospital beds to Haiti by June 1, 2010.</p>
-<p>Are you interested in becoming a 100 Beds for Haiti stakeholder&#63; Please <a href="/contact">contact us</a> to learn about more opportunities.</p>
+<h1>HOW WE WORK</h1> <p>Through grassroots mobilization, in-kind donations, corporate giving, fundraising events, social networking, media and blog support, and word of mouth, the 100 Beds for Haiti Campaign is raising the necessary resources through our friends, colleagues and supporters across the country and world to support our goal of procuring and delivering 100 hospital beds to Haiti.</p>
+
+<p>Is your company or organization interested in being more involved with the 100 Beds for Haiti Campaign? We encourage new stakeholders and supporters. Please <a href="/contact">contact us</a> to learn about more opportunities.</p>
 
 </div>
 
 <div id="left"><h1>Who We Are</h1>
-<p>Meet the <a href="#steering">Steering Committee</a> and <a href="#advisory">Advisory Board</a>.</p>
-<p>We are a team of young professionals and we bring experiences in public
-health, disaster management, economic development, advocacy, law, journalism and media, humanitarian aid, visual and performing arts, 
-community building, philanthropy, marketing, event planning, and social networking. Our core Steering Committee is guided by a network of
-supporters including an Advisory Board and Key Stakeholders.</p> <p>Our commitment to helping build a stronger more stable Haiti is rooted 
-in the recognition of our shared humanity and our responsibility to use our talents and energy to create positive, sustainable change for a 
-healthier Haiti.</p> <p>Please take a moment and learn more about who we are.</p></div>
+
+<p>We are a team of young professionals bringing experiences in public health, disaster management, economic development, advocacy, law, journalism and media, humanitarian aid, visual and performing arts, community building, philanthropy, marketing, event planning, and social networking to help Haiti. Our core Steering Committee is guided by a network of supporters including an Advisory Board and Key Stakeholders. </p>
+
+<p>Our commitment to helping build a stronger  future for Haiti is rooted in the recognition of our shared humanity and our responsibility to use our talents and energy to create positive, sustainable change for a healthier Haiti and a healthier global community.</p>
+
+<p>Please take a moment and learn more about who we are.</p>
+</div>
 </div>
 
 <div class="onecol">
@@ -36,7 +35,8 @@ healthier Haiti.</p> <p>Please take a moment and learn more about who we are.</p
 </div>
 <div class="left">
 <ul><li><img 
-src="/images/judith.jpg" /><strong>Judith Kaine:</strong> Influenced by a visit to Cap Haitien and her work in healthcare with Haitian migrants in the Dominican Republic, Judith founded the 100 Beds for Haiti Campaign. Judith brings experiences working with refugees and displaced communities in the USA, Sudan, Uganda, and the Caribbean, on projects and research in the areas of health promotion, post-conflict reconstruction, and community building through the arts. A Floridian turned Brooklynite, she is completing her Master of International Affairs and Master of Public Health degrees at Columbia University. Judith likes using cameras and modern media to focus her passions as they relate to logic and emotion, the creation of social change, humor and ideas, good tastes, and good times.</li>
+src="/images/judith.jpg" /><strong>Judith Kaine:</strong> 
+Influenced by a visit to Cap Haitien and her work in healthcare with Haitian migrants in the Dominican Republic, Judith founded the 100 Beds for Haiti Campaign. Judith brings experiences working with refugees and displaced communities in the USA, Sudan, Uganda, and the Caribbean, on projects and research in the areas of health promotion, post-conflict reconstruction, and community building through the arts. A Floridian turned Brooklynite, she holds a Master of International Affairs and Master of Public Health from Columbia University. Judith is passionate about creating synergy and social change, using her camera, creativity, and passport with music playing along the way.</li>
 <li><img 
 src="/images/marc.jpg" /><strong>Marc Maleika:</strong> Before his current post heading the Sustainable Design Incubator at the Pratt Institute in Brooklyn, NY, Marc worked in Na-tural Disaster Risk Management and Prevention at the World Bank. His time spent in Pakistan, Indonesia, and Washington DC helped shape his interests in bringing smart design to business development. Marc holds a Master of International Affairs from Columbia University and a Master of Science in Economics from Maastricht University. His German and French heritage predisposes him for a love for electronic music, architecture, and fast cars.</li>
 </ul>
