--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="/css/visuallightbox.css" type="text/css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script type='text/javascript' src='/js/jquery.color-RGBa-patch.js'></script>
-    <script type='text/javascript' src='/js/example.js'></script>
   </head>
 
  
@@ -51,7 +50,7 @@
       <div id="wrap">
 	
 	<div id="sidebar">
-	  <div id="progress"><a href="/donate"><img src="images/progress35.png" alt="35 of 100 beds" /></a></div>
+	  <div id="progress"><a href="/donate"><img src="images/progress70.png" alt="70 of 100 beds" /></a></div>
 	  <object width="290" height="163"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="290" height="163"></embed></object><br />
 	  <a href="http://vimeo.com/9114595">H&ocirc;pital Sacr&eacute; Coeur "Haiti Relief Fund"</a><br />
 	  
@@ -144,6 +143,18 @@ new TWTR.Widget({
 
       <br clear="all" />
       <div id="footer"><div id="footer-wrap"><ul><li><a href="/contact">Contact Us</a></li></ul></div></div>  
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+      try {
+      var pageTracker = _gat._getTracker("UA-12751934-1");
+      pageTracker._setDomainName(".100bedsforhaiti.com");
+      pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
+
     </body>
   </html>
 
