--- a/views/main.tmpl
+++ b/views/main.tmpl
@@ -13,7 +13,11 @@
     <div style="clear:both;">&nbsp;</div>
   </div>
   <div id="left" style="height:820px">
-    <p>In Haiti's <a href="http://www.crudem.org" target="_blank">Sacr&eacute; Coeur Hospital</a>, hundreds of sick patients will spend tonight sleeping on cots, floors and benches. Something as simple as a hospital bed can improve the outcome for the sick dramatically. The 100 Beds for Haiti Campaign needs your help to procure and deliver 100 hospital beds. Your small contribution today will have a lasting impact on Haiti's healthier tomorrow. <a href="/donate">Donate now to bring beds to Haiti.</a></p>
+<p><i>Imagine surviving a devastating earthquake, a painful and debilitating crushing injury to your leg, and a frightening amputation, only to die while in recovery from a preventable condition like an infected bed sore because there was no clean hospital bed for you?</i></p>
+
+<p>In Haiti's <a href="http://www.crudem.org" target="_blank">Sacr&eacute; Coeur Hospital</a>, a shortage of hospital beds finds hundreds of sick patients sleeping on cots, floors and benches. Something as simple as a hospital bed can improve the outcome for the sick dramatically. <b>The 100 Beds for Haiti Campaign is working to get 100 hospital beds and ship them to Haiti to save lives and support the rebuilding of the country's health care system.</b></p>
+
+<p>Your contribution will help the patients and medical staff at the <a href="http://www.crudem.org" target="_blank">Sacr&eacute; Coeur Hospital</a> today and will have a lasting impact on Haiti's healthier tomorrow. <a href="/donate">Donate now to bring beds to Haiti.</a></p>
     <div id="map">
       <img src="images/map330long.png" alt="Haiti map" />
     </div>				      
