--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -26,11 +26,11 @@
 	  </div>
 
 	  <a href="http://100bedsforhaiti.com"><img src="images/haiti_logo.jpg" alt="100 Beds for Haiti logo" /></a>
-	  
+	  
 	</div>
-	
+	
       </div>
-    
+    
       <div id="navigation"><div id="wrap">
 	  <ul id="" class="nav-list group">
 	    <li><a href="/">home</a></li>
@@ -43,17 +43,17 @@
 
 
 	  </ul>
-	  
+	  
 	</div>
       </div>
-    
+    
       <div id="wrap">
-	
+	<div id="banner"><a href='/donate'><img src="images/100bed_event_banner.png"/></a></div>
 	<div id="sidebar">
 	  <div id="progress"><a href="/donate"><img src="images/progress70.png" alt="70 of 100 beds" /></a></div>
 	  <object width="290" height="163"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="290" height="163"></embed></object><br />
 	  <a href="http://vimeo.com/9114595">H&ocirc;pital Sacr&eacute; Coeur "Haiti Relief Fund"</a><br />
-	  
+	  
 	  <!-- Start of Flickr Badge -->
 	  <div class="flickr">
 	    <div class="flickrwrapper">
@@ -61,17 +61,17 @@
 	    </div>
 	    <div class="flickrlink"><a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank">100 Beds for Haiti&#39;s Flickr Photostream</a></div></div>
 	  <!-- End of Flickr Badge -->
-	  
+	  
 	  <!-- End of Flickr Badge -->
-	  
-	  
+	  
+	  
 	  <div id="social"><a href="http://100bedsforhaitiblog.blogspot.com/feeds/posts/default" target="_blank"><img src="images/rss.png" /></a>
 	    <div class="socialrow">
 	      <a href="http://twitter.com/100bedsforhaiti" target="_blank"><img src="images/twitter.png" /></a>
-	      
+	      
 	      <a href="http://www.facebook.com/home.php?#!/pages/100-Beds-for-Haiti/296584143649" target="_blank"><img src="images/facebook.png" /></a>
 	      <a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank"><img src="images/flickr.png" /></a>
-	      
+	      
 	      <a href="http://vimeo.com/9114595" target="_blank"><img src="images/vimeo.png" /></a>	      	
 	    </div>
 	  </div>
@@ -117,7 +117,7 @@ new TWTR.Widget({
 
 
 	</div>
-	
+	
 	<div id="main">
 	  $maincol()
 
@@ -136,9 +136,9 @@ new TWTR.Widget({
 	  </script>	
 	</div>
 	
-	
+	
       </div>	
-    
+    
 
 
       <br clear="all" />
